2.9.0/done/result_composability.md

# Release Notes worksheet composability

The main goal of this process is to rephrase all the commit messages below to make them **clear and easy to read** by the end user. You should follow the following instructions to do so:

* **Please clean up and format commit titles to be readable by the general PyTorch user.** Make sure you're [following the guidance here](https://docs.google.com/document/d/14OmgGBr1w6gl1VO47GGGdwrIaUNr92DFhQbY_NEk8mQ/edit)! Your resulting notes must be consistent and easy to read.
* Please sort commits into the following categories (you should not rename the categories!), I tried to pre-sort these to ease your work, feel free to move commits around if the current categorization is not good.
* Anything that is not public facing needs to be removed.
* If anything is miscategorized/belongs to another domain, move it to `miscategorized.md`.
* Please scan through `miscategorized.md` and handle any commits that belong within your domain according to these instructions.
* We place a lot of emphasis on the “BC-breaking” and “deprecation” sections. Those should be where the most effort goes in. The “improvements” and “bug fixes” for Python API should be nice as well.
* Once you are finished, move this very file from `todo/` to `done/` and submit a pull request.

The categories below are as follows:

* BC breaking: All commits that are BC-breaking. These are the most important commits. If any pre-sorted commit is actually BC-breaking, do move it to this section. Each commit should contain a paragraph explaining the rational behind the change as well as an example for how to update user code [BC-Guidelines](https://docs.google.com/document/d/14OmgGBr1w6gl1VO47GGGdwrIaUNr92DFhQbY_NEk8mQ/edit#heading=h.a9htwgvvec1m).
* Deprecations: All commits introducing deprecation. Each commit should include a small example explaining what should be done to update user code.
* new_features: All commits introducing a new feature (new functions, new submodule, new supported platform etc)
* improvements: All commits providing improvements to existing feature should be here (new backend for a function, new argument, better numerical stability)
* bug fixes: All commits that fix bugs and behaviors that do not match the documentation
* performance: All commits that are added mainly for performance (we separate this from improvements above to make it easier for users to look for it)
* documentation: All commits that add/update documentation
* Developers: All commits that are not end-user facing but still impact people that compile from source, develop into pytorch, extend pytorch, etc
* not user facing: All commits that are not public end-user facing and hence should be dropped from the release notes

## composability
### bc breaking
### deprecation
### new features
### improvements

*Decompositions, FakeTensor and meta tensors*

Several operator decomps + meta implementations received improvements/bugfixes:
- aten._scaled_dot_product_attention_math decomp: set enable_gqa ([#158604](https://github.com/pytorch/pytorch/pull/158604))
- aten._scaled_dot_product_attention_math_for_mps meta impl ([#159695](https://github.com/pytorch/pytorch/pull/159695))
- aten.add.Scalar meta impl ([#161332](https://github.com/pytorch/pytorch/pull/161332))
- aten.expand_copy decomp ([#161688](https://github.com/pytorch/pytorch/pull/161688))
- aten.linalg_vector_norm: fix result dtype cast in decomp ([#155111](https://github.com/pytorch/pytorch/pull/155111))
- Add dtype checks in meta impls for several ordering ops ([#159556](https://github.com/pytorch/pytorch/pull/159556))
- aten.complex: fix meta function ([#160894](https://github.com/pytorch/pytorch/pull/160894))
- aten._grouped_mm: improve shape checks ([#159666](https://github.com/pytorch/pytorch/pull/159666))
- improved unbacked symint (dynamic shape) support for several decompositions ([#148815](https://github.com/pytorch/pytorch/pull/148815), [#156902](https://github.com/pytorch/pytorch/pull/156902), [#157008](https://github.com/pytorch/pytorch/pull/157008), [#158894](https://github.com/pytorch/pytorch/pull/158894), [#159184](https://github.com/pytorch/pytorch/pull/159184), [#160683](https://github.com/pytorch/pytorch/pull/160683), [#160253](https://github.com/pytorch/pytorch/pull/160253), [#162084](https://github.com/pytorch/pytorch/pull/162084), [#162099](https://github.com/pytorch/pytorch/pull/162099), [#162109](https://github.com/pytorch/pytorch/pull/162109), [#160462](https://github.com/pytorch/pytorch/pull/160462))

*Custom ops*
- Get tensor subclasses and torch.library.triton_op to dispatch correctly ([#160341](https://github.com/pytorch/pytorch/pull/160341))


### bug fixes
### performance
### docs
### devs
- Stop suggesting to use guard_size_oblivious on data dependent errors ([#160510](https://github.com/pytorch/pytorch/pull/160510))
- Avoid unnecessary slices resulting in data-dependent errors ([#157528](https://github.com/pytorch/pytorch/pull/157528))
### Untopiced
### not user facing

- Update test after CUTLASS upgrade ([#157903](https://github.com/pytorch/pytorch/pull/157903))
- move view_meta to fake impl ([#158406](https://github.com/pytorch/pytorch/pull/158406))
- unify broadcast_shapes functions and avoid duplicates ([#160251](https://github.com/pytorch/pytorch/pull/160251))
### security
